[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "learn-ai"
version = "0.1.0"
description = "Learn AI, related Math"
dependencies = [

]

[tool.setuptools.packages.find]
exclude = ["polygon*"]


[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "flake8>=7.1.0",
    "mypy>=1.11.1",
    "pre-commit>=3.7.1",
    "pyright>=1.1.373"
]

[tool.black]
line-length = 88
target-version = ['py312']  # For Python 3.12+
exclude = "polygon"

[tool.flake8]
max-line-length = 88
exclude = "polygon"

[tool.mypy]
python_version = "3.12"
exclude = ["polygon/"]

[tool.pyright]
typeCheckingMode = "strict"  # "basic" or "strict"
reportMissingTypeStubs = false  # TODO: Enable after generating stubs for cmn

